--- a/styles/main.css
+++ b/styles/main.css
@@ -1,100 +1,364 @@
+:root {
+    --header-height: 60px;
+    --column-padding-vertical: 20px;
+    --column-padding-horizontal: 20px;
+    --dark-blue: #1b365c;
+    --light-blue: #9ce0ee;
+    --pastel-peach: #fcd2b8;
+    --pastel-yellow: #fcf5d8;
+}
+
+html {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 body {
+    flex-grow: 1;
+    width: 100%;
+    background-color: var(--light-blue);
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
     font-family: 'Inter', sans-serif;
     color: #1b365c;
-    background-color: #9ce0ee;
-    margin: 0;
 }
 
 body a:link {
-    color: #1b365c;
+    color: var(--dark-blue);
 }
 
 body a:visited {
-    color: #1b365c;
-}
-
-.nav-bar {
-    background-color: #9ce0ee;
-    padding: 10px;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 40px;
-    display: flex;
-    align-items: center;
-}
-
-.nav-bar a:link {
-    opacity: 0.5;
-    text-decoration: none;
-}
-
-.nav-bar a:hover {
-    opacity: 1;
-}
-
-.nav-current {
-    font-weight: 500;
-}
-
-#logo {
-    font-weight: 900;
-    text-decoration: none;
-}
-
-#logo a:link {
-    opacity: 1;
-}
-
-.page-content {
-    background-color: #fcf5d8;
-    display: flex;
-    justify-content: center;
-}
-
-.main-column {
-    padding-top: 50px;
-    margin-left: 40px;
-    margin-right: 40px;
-    max-width: 800px;
-    padding-bottom: 20px;
-}
-
-.side-columns {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 50px;
-    align-self: flex-start;
-    padding-top: 25px;
-    min-width: 150px;
-}
-
-.contents-column {
-    padding-left: 20px;
-}
-
-.page-column {
-    padding-top: 25px;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 50px;
-    align-self: flex-start;
-    min-width: 150px;
-
+    color: var(--dark-blue);
 }
 
 h1 {
     font-weight: 700;
+    margin-top: 0px;
 }
 
 h2 {
+    font-weight: 700;
+    margin-top: 0px;
+}
+
+header {
+    flex-shrink: 0;
+    height: var(--header-height);
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: var(--light-blue);
+    z-index: 2;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    box-shadow: 0px 3px 25px rgba(159, 158, 165, 0.075), 0px 3px 5px rgba(0, 0, 0, 0.09);
+}
+
+.header-items {
+    flex-grow: 1;
+    text-align: center;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    max-width: 1235px;
+}
+
+.header-links {
+    display: flex;
+    gap: 10px;
+    width: 100%;
+    justify-content: flex-start;
+    padding-left: 17px;
+}
+
+.header-link-current a:link {
+    opacity: 1;
+    font-weight: 700;
+}
+
+.header-link-current {
+    font-weight: 700;
+}
+
+.header-link {
+    opacity: 0.5;
+}
+
+header a:link {
+    text-decoration: none;
+}
+
+header a:hover {
+    opacity: 1;
+}
+
+
+#logo {
+    margin-left: 20px;
+    font-size: 22px;
+    font-weight: 900;
+}
+
+form {
+    display: flex;
+    padding: 2px;
+    background-color: #8ec6d7;
+    height: 27px;
+    margin-right: 20px;
+    border-radius: 25px;
+}
+
+input[type="search"] {
+    border: none;
+    background: transparent;
+    margin: 0;
+    padding: 7px 8px;
+    font-size: 14px;
+    color: inherit;
+    border: 1px solid transparent;
+    border-radius: inherit;
+}
+
+
+input[type="search"]::placeholder {
+    color: #1b365c;
+    opacity: 0.5;
+}
+
+button[type="submit"] {
+    text-indent: -999px;
+    overflow: hidden;
+    width: 40px;
+    padding: 0;
+    margin: 0;
+    border: 1px solid transparent;
+    border-radius: inherit;
+    background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat center;
+    cursor: pointer;
+    opacity: 0.5;
+}
+
+button[type="submit"]:hover {
+    opacity: 1;
+}
+
+
+button[type="submit"]:focus,
+input[type="search"]:focus {
+    outline: none;
+}
+
+.more-options-icon-wrapper {
+
+    margin-right: 20px;
+}
+
+.close-options-icon-wrapper {
+    display: none;
+    margin-right: 15px;
+}
+
+.close-hamburger-menu-icon-wrapper {
+    display: none;
+    margin-left: 15px;
+    margin-right: 5px;
+}
+
+.hamburger-menu-icon-wrapper {
+    margin-left: 25px;
+}
+
+.hamburger-menu-column {
+    margin-bottom: 30px;
+}
+
+.hamburger-menu {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: var(--header-height); /* Stay at the top */
+    left: 0;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    background-color: var(--light-blue);
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+.hamburger-menu-content {
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 25px;
+    padding-bottom: 75px;
+}
+
+.more-options-menu {
+    flex-shrink: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    position: -webkit-sticky;
+    position: sticky;
+    overflow-x: hidden;
+    height: 0px;
+    overflow-y: hidden;
+    top: var(--header-height);
+    background-color: var(--light-blue);
+    z-index: 1;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: 0.5s;
+    box-shadow: 0px 3px 25px rgba(159, 158, 165, 0.075), 0px 3px 5px rgba(0, 0, 0, 0.09);
+}
+
+.more-options-menu a:link {
+    text-decoration: none;
+}
+
+
+
+.menu-search-bar {
+    margin-bottom: 25px;
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+.main-content-wrapper {
+    flex: 1 0 auto;
+    display: flex;
+    background-color: var(--pastel-yellow);
+    flex-direction: row;
+    justify-content: center;
+}
+
+.side-column {
+    background-color: var(--pastel-yellow);
+    padding-top: var(--column-padding-vertical);
+    padding-bottom: var(--column-padding-vertical);
+    padding-left: var(--column-padding-horizontal);
+    padding-right: var(--column-padding-horizontal);
+    max-width: 150px;
+    min-width: 150px;
+    flex-shrink: 0;
+    font-size: 14px;
+    overflow-y: scroll;
+    max-height: calc(100vh - var(--header-height) - calc(var(--column-padding-vertical) * 2));
+    flex-grow: 1;
+    position: -webkit-sticky;
+    position: sticky;
+    top: var(--header-height);
+}
+
+.side-column-labels {
     font-weight: 500;
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+
+.middle-column {
+    max-width: 800px;
+    padding-left: var(--column-padding-horizontal);
+    padding-right: var(--column-padding-horizontal);
+    padding-top: var(--column-padding-vertical);
+    padding-bottom: var(--column-padding-vertical);
+    background-color: var(--pastel-yellow);
 }
 
 .main-body-text {
     padding: 20px;
+    margin-bottom: 10px;
     background-color: #fcd2b8;
     border-radius: 25px;
 }
 
+@media screen and (max-width: 1200px) {
+    .right-column {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .combined-column {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 991px) and (min-width: 768px) {
+
+    .more-options-icon-wrapper {
+        display: block;
+    }
+    .hamburger-menu,
+    .hamburger-menu-icon,
+    .hamburger-menu-icon-wrapper,
+    .close-hamburger-menu-icon,
+    .close-hamburger-menu-icon-wrapper {
+        display: none !important;
+    }
+
+}
+
+@media screen and (max-width: 991px) {
+
+    .header-links,
+    .main-search-bar {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 992px) {
+
+    .more-options-icon-wrapper,
+    .more-options-icon,
+    .more-options-menu,
+    .close-options-icon,
+    .close-options-icon-wrapper {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .left-column {
+        display: none;
+    }
+    .hamburger-menu-icon,
+    .hamburger-menu-icon-wrapper {
+        display: block;
+    }
+    #logo {
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+}
+
+@media screen and (min-width: 769px) {
+    #more-options-button {
+        display: block;
+    }
+    .hamburger-menu,
+    .hamburger-menu-icon,
+    .hamburger-menu-icon-wrapper,
+    .close-hamburger-menu-icon,
+    .close-hamburger-menu-icon-wrapper {
+        display: none;
+    }
+}
+
+.combined-column {
+    padding-bottom: 30px;
+}
+
+footer {
+    display: flex;
+    flex-shrink: 0;
+    height: 40px;
+    align-items: center;
+    padding-left: 10px;
+}
