--- a/styles/home.css
+++ b/styles/home.css
@@ -127,13 +127,16 @@
 .feature-image {
   height: 300px;
   width: auto;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
 }
 
 .feature-text-image-wrapper {
   display: grid;
   grid-template-columns: 50% 50%;
+  margin-bottom: 25px;
+}
+
+.closing-feature {
+  margin-bottom: 40px;
 }
 
 .feature-text-wrapper {
@@ -203,13 +206,7 @@
 .feature-image-wrapper-2 {
   order: -1;
   justify-content: left;
-}
-
-.feature-image-2 {
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
+  position: relative;
 }
 
 footer {
@@ -245,9 +242,11 @@ footer {
 }
 
 .icon {
+  border-radius: 5px;
   height: 40px;
-  padding-left: 20px;
+  margin-left: 20px;
   display: none;
+  box-shadow: 0px 3px 25px rgba(159, 158, 165, 0.075), 0px 3px 5px rgba(0, 0, 0, 0.09);
 }
 
 @media screen and (max-width: 991px) {
@@ -295,7 +294,15 @@ footer {
   .feature-image-wrapper {
     margin-bottom: 30px;
     justify-content: center;
+    overflow: visible;
   }
+  .feature-image {
+    width: 100%;
+    height: 100%;
+    max-width: 500px;
+  }
+    
+
   .inner-gradient, .inner-gradient-right {
     display: none;
   }
