--- a/styles/main.css
+++ b/styles/main.css
@@ -351,7 +351,8 @@ input[type="search"]:focus {
 
 .column-link {
     margin-bottom: 10px;
-    height: 30px;
+    height: 35px;
+    padding-right: 10px;
     transition: all 100ms ease-in-out;
     display: flex;
     align-items: center;
