Added styling to list items

--- a/styles/main.css
+++ b/styles/main.css
@@ -77,6 +77,16 @@ h2 {
     scroll-margin-top: calc(var(--header-height) + 10px);
 }
 
+ul {
+    padding-left: 20px;
+    line-height: 150%;
+    margin-bottom: 0;
+}
+
+li {
+    list-style: disc;
+}
+
 section {
     scroll-margin-top: calc(var(--header-height) + 10px);
 }
@@ -540,6 +550,7 @@ footer {
     header {
         overflow: hidden;
     }
+    
 }
 
 @media screen and (min-width: 770px) {
@@ -589,6 +600,9 @@ footer {
 @media screen and (max-width: 400px) {
     body * {
         overflow-x: hidden;
+    }
+    li {
+        overflow-x: visible;
     }
   }
   
